--- a/src/Registration/Register.css
+++ b/src/Registration/Register.css
@@ -1,5 +1,5 @@
 *  {
-    background-color: white;
+    background-color: rgb(255, 255, 255);
 }
 
 h1 {
@@ -9,4 +9,26 @@ h1 {
 
 label {
     color: #000;
+    min-width: 150px;
+    text-align: left;
+    display: block;
+    padding: 7px;
+}
+
+input {
+    color: black;
+    margin-left: 2%;
+    background-color: rgb(220, 214, 214);
+    border-radius: 10%;
+    padding: 3px;
+    border-color: black;
+    
+}
+
+label, input {
+    display: inline-block;
+}
+
+button {
+    margin-top: 2%;
 }
