--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -65,7 +65,7 @@ a:hover {
 /* Main Content Styles */
 .main-content {
   flex-grow: 1;
-  padding: 100px 20px 20px; /* Added top padding to account for the fixed header */
+  padding: 100px 20px 20px;
   background-color: #fff;
 }
 
