--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,22 @@
 .read-the-docs {
   color: #888;
 }
+
+body {
+  background: url('assets/florian-olivo-code-unsplash.jpg') no-repeat center center fixed;
+  background-size: cover;
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+}
+
+
+.app-container {
+  background-image: url('/background.jpg');
+  background-size: cover;
+  background-position: center;
+  height: 100vh; /* Full viewport height */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
