--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,14 @@
   text-align: center;
 }
 
+body {
+  background: url('assets/florian-olivo-code-unsplash.jpg') no-repeat center center fixed;
+  background-size: cover;
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
