--- a/src/styles/components/PostPage.modules.css
+++ b/src/styles/components/PostPage.modules.css
@@ -10,7 +10,7 @@ body {
 .post-container {
     max-width: 600px;
     margin: 0 auto;
-    background-color: #ffffff;
+    background-color: #f0eded2c;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -27,7 +27,7 @@ body {
     border: 1px solid #e1e8ed;
     border-radius: 8px;
     padding: 16px;
-    margin-bottom: 16px;
+    margin-bottom: 20px;
     background-color: #ffffff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     max-width: 100%;
